--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "microsaas",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "bin": {
-    "microsaas": "./index.js"
+    "microsaas": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
